<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.sakaiproject</groupId>
        <artifactId>master</artifactId>
        <version>2.9-SNAPSHOT</version>
    </parent>

    <name>Sakai Emailtemplateservice Base POM (emailtemplateservice)</name>
    <groupId>org.sakaiproject.emailtemplateservice</groupId>
    <artifactId>emailtemplateservice</artifactId>
    <packaging>pom</packaging>
    <version>0.6-SNAPSHOT</version>
    <organization>
        <name>Sakai Project</name>
        <url>http://sakaiproject.org/</url>
    </organization>
    <inceptionYear>2007</inceptionYear>

    <licenses>
        <license>
            <name>ECL-2.0</name>
            <url>http://www.osedu.org/licenses/ECL-2.0</url>
            <distribution>repo</distribution>
            <comments>Copyright 2007-2009 Sakai Foundation</comments>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>dhorwitz</id>
            <name>David Horwitz</name>
            <organization>University of Cape Town</organization>
            <email>david.horwitz@uct.ac.za</email>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
        <developer>
            <id>arwhyte</id>
            <name>Anthony Whyte</name>
            <organization>Sakai Foundation/University of Michigan</organization>
            <email>arwhyte@umich.edu</email>
            <roles>
                <role>POM plumber</role>
                <role>Release Manager</role>
            </roles>
        </developer>
    </developers>

    <contributors>
        <contributor>
            <name>Beth Kirschner</name>
            <organization>University of Michigan</organization>
            <email>bkirschn@umich.edu</email>
            <roles>
                <role>Language bundles</role>
            </roles>
        </contributor>
    </contributors>
    
    <modules>
        <module>api</module>
        <module>deploy</module>
        <module>impl/logic</module>
        <module>pack</module>
        <module>tool</module>
    </modules>
    
    <properties>
        <sakai.simple-xml.version>2.6</sakai.simple-xml.version>
    	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <scm>
        <connection>scm:svn:https://source.sakaiproject.org/svn/emailtemplateservice/branches/emailtemplateservice-0.6.x</connection>
        <developerConnection>scm:svn:https://source.sakaiproject.org/svn/emailtemplateservice/branches/emailtemplateservice-0.6.x</developerConnection>
        <url>https://source.sakaiproject.org/svn/emailtemplateservice/branches/emailtemplateservice-0.6.x</url>
    </scm>
    
    <distributionManagement>
        <site>
            <id>sakai-site</id>
            <name>Sakai release Site</name>
            <url>scpexe://source.sakaiproject.org/var/www/html/release/emailtemplateservice/${project.version}</url>
        </site>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>emailtemplateservice-api</artifactId>
                <version>${project.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>${project.groupId}</groupId>
                <artifactId>emailtemplateservice-impl</artifactId>
                <version>${project.version}</version>
            </dependency>
    	    <dependency>
        		<groupId>org.simpleframework</groupId>
        		<artifactId>simple-xml</artifactId>
        		<version>${sakai.simple-xml.version}</version>
        		<scope>provided</scope>
        	</dependency>
        </dependencies>
    </dependencyManagement>
    
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <reportSets>
                  <reportSet>
                    <id>aggregate</id>
                    <configuration>
                      <aggregate>true</aggregate>
                          <source>1.5</source>
                      <encoding>UTF-8</encoding>
                        <links>
                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
                        <link>http://java.sun.com/products/servlet/2.3/javadoc/</link>
                      </links>
                      <breakiterator>true</breakiterator>
                      <verbose>false</verbose>
                      <maxmemory>512m</maxmemory>
                      <additionalJOption>
                        -J-Xms168m -J-Xmx512m -J-XX:PermSize=128m -J-XX:NewSize=64m
                      </additionalJOption>
                    </configuration>
                    <reports>
                      <report>aggregate</report>
                    </reports>
                  </reportSet>
                </reportSets>   
            </plugin>
        </plugins>
    </reporting>
</project>
